k3s_server/network/network.dnsserver.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pihole
  type: ClusterIP
