k3s_server/network/network.pivpn.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pivpn
  name: pivpn
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pivpn
  type: ClusterIP
