k3s_server/network/network.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: "network"
  name: "network-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - network.192.168.1.100.nip.io
    secretName: "network.192.168.1.100.nip.io-prod-tls"
  rules:
  - host: "network.192.168.1.100.nip.io"
    http:
      paths:
        - backend:
            serviceName: "pihole"
            servicePort: 80
          path: ""
